--- a/pom.xml
+++ b/pom.xml
@@ -8,7 +8,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.mssm.pharm.maayanlab.x2k</groupId>
 	<artifactId>X2K</artifactId>
-	<version>1.0-SNAPSHOT</version>
+	<version>1.1</version>
 	<packaging>war</packaging>
 	<name>X2K</name>
 
