--- a/pom.xml
+++ b/pom.xml
@@ -7,10 +7,9 @@
 	</parent>
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>edu.mssm.pharm.maayanlab.x2k</groupId>
-	<artifactId>X2K_dev</artifactId>
-	<version>1.9</version>
+	<artifactId>X2K</artifactId>
 	<packaging>war</packaging>
-	<name>X2K_dev</name>
+	<name>X2K</name>
 
 
 	<repositories>
@@ -322,5 +321,6 @@
 			</build>
 		</profile>
 	</profiles>
-	<url>https://amp.pharm.mssm.edu/X2K_dev</url>
+	<url>https://amp.pharm.mssm.edu/X2K</url>
+	<version>2.0</version>
 </project>
