--- a/pom.xml
+++ b/pom.xml
@@ -32,7 +32,7 @@
 		<dependency>
 			<groupId>edu.mssm.pharm.maayanlab.Genes2Networks</groupId>
 			<artifactId>G2N</artifactId>
-			<version>1.0</version>
+			<version>1.6-SNAPSHOT</version>
 		</dependency>
 
 
@@ -322,5 +322,5 @@
 		</profile>
 	</profiles>
 	<url>https://amp.pharm.mssm.edu/X2K</url>
-	<version>2.6</version>
+	<version>2.9</version>
 </project>
