Migrated to gradle

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,11 @@
-.DS_store
-target/
-.settings/
-.metadata/
-src/.metadata/
-.idea/
-src/main/webapp/dashboard-mockup/
 .classpath
+.DS_store
+.idea/
+.metadata/
 .project
+.settings/
+build
 launch.properties
+src/.metadata/
+src/main/webapp/dashboard-mockup/
+target/
