Revert launch.properties

--- a/.gitignore
+++ b/.gitignore
@@ -1,10 +1,10 @@
-.DS_store
-target/
-.settings/
-.metadata/
-src/.metadata/
-.idea/
-src/main/webapp/dashboard-mockup/
 .classpath
+.DS_store
+.idea/
+.metadata/
 .project
-launch.properties
+.settings/
+build
+src/.metadata/
+src/main/webapp/dashboard-mockup/
+target/
