--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,11 +11,11 @@
   </mime-mapping>
   <error-page>
     <error-code>400</error-code>
-    <location>/error.jsp</location>
+    <location>/templates/error.jsp</location>
   </error-page>
   <error-page>
     <error-code>404</error-code>
-    <location>/error.jsp</location>
+    <location>/templates/error.jsp</location>
   </error-page>
 <!--   <servlet>
     <servlet-name>index.jsp</servlet-name>
@@ -26,8 +26,8 @@
     <url-pattern>/index</url-pattern>
   </servlet-mapping> -->
   <welcome-file-list>
-    <welcome-file>index</welcome-file>
-    <welcome-file>index.html</welcome-file>
+    <welcome-file>/templates/index</welcome-file>
+    <welcome-file>/templates/index.html</welcome-file>
   </welcome-file-list>
 
 </web-app>
