--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -3,7 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "gruntfile.js",
-  "scripts": {},
+  "scripts": {
+    "build": "grunt build"
+  },
   "author": "",
   "license": "MIT",
   "dependencies": {
@@ -19,6 +21,7 @@
     "grunt-cli": "^1.2.0",
     "grunt-contrib-less": "^1.4.1",
     "less": "^3.0.1",
-    "npm": "^5.8.0"
+    "npm": "^5.8.0",
+    "save-svg-as-png": "^1.3.1"
   }
 }
