--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -22,6 +22,7 @@
     "grunt": "^1.0.2",
     "grunt-browserify": "^5.3.0",
     "grunt-cli": "^1.2.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-less": "^1.4.1",
     "less": "^3.0.1",
     "npm": "^5.8.0",
