Tested and verified working babel polyfill

--- a/build.gradle
+++ b/build.gradle
@@ -70,6 +70,7 @@ task prepareNpm(type: NpmTask) {
 }
 
 task buildGrunt(type: GruntTask) {
+    inputs.file("${webappDir}/.babelrc")
     inputs.file("${webappDir}/gruntfile.js")
     inputs.files fileTree(webappDir).include('**/*.js').include('**/*.css').exclude('dist/**')
     outputs.dir("${webappDir}/dist")
