--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -9,13 +9,14 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "core-js": "^2.5.4",
+    "babel-polyfill": "^6.26.0",
     "save-svg-as-png": "^1.3.1"
   },
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-replace-require": "0.0.4",
     "babel-plugin-transform-remove-strict-mode": "0.0.2",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.6.1",
     "babelify": "^8.0.0",
     "browserify": "^16.1.1",
