--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -9,7 +9,6 @@
   "author": "",
   "license": "MIT",
   "dependencies": {
-    "babel-polyfill": "^6.26.0",
     "save-svg-as-png": "^1.3.1"
   },
   "devDependencies": {
@@ -17,11 +16,13 @@
     "babel-plugin-replace-require": "0.0.4",
     "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-plugin-transform-runtime": "^6.23.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.6.1",
     "babelify": "^8.0.0",
     "browserify": "^16.1.1",
     "grunt": "^1.0.2",
     "grunt-browserify": "^5.3.0",
+    "grunt-changed": "^2.0.1",
     "grunt-cli": "^1.2.0",
     "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-less": "^1.4.1",
