--- a/src/main/webapp/.babelrc
+++ b/src/main/webapp/.babelrc
@@ -11,6 +11,7 @@
     ],
     "plugins": [
         "transform-remove-strict-mode",
+        "transform-react-jsx",
         "transform-runtime"
     ]
 }
