--- a/src/main/webapp/package.json
+++ b/src/main/webapp/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "gruntfile.js",
   "scripts": {
-    "build": "grunt build"
+    "build": "grunt build",
+    "build-tables": "resources/json_to_tables.jsx templates/downloads.jsp resources/*.tsv"
   },
   "author": "",
   "license": "MIT",
@@ -14,6 +15,7 @@
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-plugin-replace-require": "0.0.4",
+    "babel-plugin-transform-react-jsx": "^6.24.1",
     "babel-plugin-transform-remove-strict-mode": "0.0.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-polyfill": "^6.26.0",
@@ -28,6 +30,9 @@
     "grunt-contrib-less": "^1.4.1",
     "less": "^3.0.1",
     "npm": "^5.8.0",
+    "pretty": "^2.0.0",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
     "windowify": "^0.3.0"
   }
 }
