Updated build.gradle to use newer node plugin

--- a/build.gradle
+++ b/build.gradle
@@ -2,18 +2,19 @@ buildscript {
     repositories {
         jcenter()
         maven { url "https://plugins.gradle.org/m2/" }
+        gradlePluginPortal()
     }
 
     dependencies {
         classpath 'com.bmuschko:gradle-tomcat-plugin:2.4.2'
-        classpath "com.moowork.gradle:gradle-node-plugin:1.2.0"
+        classpath "com.github.node-gradle:gradle-node-plugin:3.0.1"
     }
 }
 
 apply plugin: 'java'
 apply plugin: 'maven'
 apply plugin: 'war'
-apply plugin: 'com.moowork.node'
+apply plugin: 'com.github.node-gradle.node'
 apply plugin: 'com.bmuschko.tomcat'
 
 group = 'edu.mssm.pharm.maayanlab.x2k'
@@ -73,7 +74,7 @@ task buildProject(type: NpmTask) {
     args = ["run", "build"]
 }
 
-build.dependsOn buildProject
+war.dependsOn buildProject
 
 tomcat {
     httpPort = 8080
